# API-Test

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md
ApiTest/: CMakeLists.txt
ApiTest/include/: ApiTest.hpp  argument.hpp  exception.hpp  invalid_argument.hpp  out_of_range.hpp
ApiTest/include/details/: Argument.hpp  ArgumentCustom.hpp  Internal.hpp
ApiTest/include/internal/: Parser.hpp
ApiTest/src/: ApiTest.cpp  Argument.cpp  Parser.cpp  argument.cpp  invalid_argument.cpp  out_of_range.cpp
apitest/: Makefile
apitest/inc/: apitest.h
apitest/include/: apitest.h  apitest_internal.h  apitest_version.h
apitest/src/: apitest.c  apitest_internal.c  apitest_version.c
coverage_report/: cmd_line  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  memcheck_apitest.txt  memcheck_apitest_internal.txt  memcheck_apitest_version.txt  memcheck_dummy_library.txt
coverage_report/apitest/src/: apitest.c.func-c.html  apitest.c.func.html  apitest.c.gcov.html  apitest_internal.c.func-c.html  apitest_internal.c.func.html  apitest_internal.c.gcov.html  apitest_version.c.func-c.html  apitest_version.c.func.html  apitest_version.c.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/dummy-lib/src/: dummy_library.c.func-c.html  dummy_library.c.func.html  dummy_library.c.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
docs/: doxygen.conf
docs/html/: README_8md.html  annotated.html  apitest_8c.html  apitest_8c__incl.map  apitest_8c__incl.md5  apitest_8h.html  apitest_8h__dep__incl.map  apitest_8h__dep__incl.md5  apitest_8h__incl.map  apitest_8h__incl.md5  apitest_8h_source.html  apitest__internal_8c.html  apitest__internal_8c__incl.map  apitest__internal_8c__incl.md5  apitest__internal_8h.html  apitest__internal_8h__dep__incl.map  apitest__internal_8h__dep__incl.md5  apitest__internal_8h__incl.map  apitest__internal_8h__incl.md5  apitest__internal_8h_source.html  apitest__version_8c.html  apitest__version_8c__incl.map  apitest__version_8c__incl.md5  apitest__version_8h.html  apitest__version_8h__dep__incl.map  apitest__version_8h__dep__incl.md5  apitest__version_8h__incl.map  apitest__version_8h__incl.md5  apitest__version_8h_source.html  bug.html  classes.html  dir_000002_000001.html  dir_000005_000004.html  dir_04033e3180343bf8a2d10ff3aee628d1.html  dir_403d805f230921d79fcd6351fa9e9803.html  dir_403d805f230921d79fcd6351fa9e9803_dep.map  dir_403d805f230921d79fcd6351fa9e9803_dep.md5  dir_7c362f18757ce44b299d10259793758e.html  dir_7c362f18757ce44b299d10259793758e_dep.map  dir_7c362f18757ce44b299d10259793758e_dep.md5  (+40 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  classes_0.js  defines_0.js  defines_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
dummy-lib/: CMakeLists.txt  Makefile
dummy-lib/inc/: dummy_library.h
dummy-lib/include/: dummy_library.h
dummy-lib/src/: dummy_library.c
test/: CMakeLists.txt  Makefile  test.txt
test/include/: ArgumentExtended.hpp
test/src/: ArgumentExtended.cpp  Test.cpp  apitest_test.c
unit-test/: CMakeLists.txt
unit-test/apitest/: CMakeLists.txt  apitest_test.cpp
unit-tests/: CMakeLists.txt  Makefile
unit-tests/apitest/: Makefile  apitest_get_command_test.txt  apitest_test.cpp
unit-tests/apitest/apitest/: Makefile  apitest_get_command_test.txt  test.txt
unit-tests/apitest/apitest/src/: apitest_test.cpp
unit-tests/apitest/apitest_internal/: Makefile
unit-tests/apitest/apitest_internal/src/: apitest_internal_test.cpp
unit-tests/apitest/apitest_version/: Makefile
unit-tests/apitest/apitest_version/src/: apitest_version_test.cpp
unit-tests/apitest_version/: Makefile  apitest_version_test.cpp
unit-tests/argument/: CMakeLists.txt
unit-tests/argument/src/: argument_test.cpp
unit-tests/dummy-lib/: Makefile
unit-tests/dummy-lib/dummy_library/: Makefile
unit-tests/dummy-lib/dummy_library/src/: dummy_library_test.cpp
unit-tests/dummy_library/: Makefile  dummy_library_test.cpp
unit-tests/invalid_argument/: CMakeLists.txt
unit-tests/invalid_argument/src/: invalid_argument_test.cpp
unit-tests/mocks/: glib_mock.hpp
unit-tests/mocks/apitest/: invalid_argument_mock.hpp  out_of_range_mock.hpp
unit-tests/mocks/std/: format_begin.hpp  format_end.hpp  format_mock.hpp  string_begin.hpp  string_end.hpp  string_mock.hpp
unit-tests/out_of_range/: CMakeLists.txt
unit-tests/out_of_range/src/: out_of_range_test.cpp
